# algo-laba5

./: .gitignore  CMakeLists.txt  README.md
include/: rabin-karp-search-algorithm.hpp
src/: rabin-karp-search-algorithm.cpp
tests/: test.cpp
tests/resources/: test1.txt  test2.txt  test3.txt
